# sri-lanka-macro-publisher

./: .gitignore  DAILY_REPORT.md  LEADERBOARD.md  Makefile  POST.txt  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  pipeline.yml  source-health.yml
data/: file_history.csv  pipeline_history.csv  status.json
data/archives/reports/: DAILY_REPORT__20260329T094709922378Z.md  DAILY_REPORT__20260329T102953098366Z.md  DAILY_REPORT__20260329T105353499302Z.md  DAILY_REPORT__20260330T023149440630Z.md  DAILY_REPORT__20260330T051143745638Z.md  (+817 more)
data/history/: aud_lkr_indicative.csv  aud_lkr_tt_buy.csv  aud_lkr_tt_sell.csv  ccpi_colombo.csv  cny_lkr_indicative.csv  cny_lkr_tt_buy.csv  cny_lkr_tt_sell.csv  eur_lkr_indicative.csv  eur_lkr_tt_buy.csv  eur_lkr_tt_sell.csv  gbp_lkr_indicative.csv  gbp_lkr_tt_buy.csv  gbp_lkr_tt_sell.csv  jpy_lkr_indicative.csv  jpy_lkr_tt_buy.csv  jpy_lkr_tt_sell.csv  usd_lkr_indicative.csv  usd_lkr_spot.csv  usd_lkr_tt_buy.csv  usd_lkr_tt_sell.csv
data/latest/: cbsl_fx.json  dcs_ccpi.json
data/normalized/: cbsl_fx.jsonl  dcs_ccpi.jsonl
scripts/: generate_charts.py  generate_readme_dashboard.py  generate_readme_previews.py
src/macro_publisher/: __init__.py  cli.py  config.py  logging.py  models.py  validators.py
tests/: test_archive.py  test_cbsl_fx.py  test_dcs_ccpi.py  test_doa_vegetable_prices.py  test_models.py  test_publishers.py  test_readme_dashboard.py
tests/fixtures/: cbsl_spot_results.html  cbsl_tt_results.html  dcs_monthly_ccpi_index.html  dcs_movements_text.txt  dcs_movements_wrapper.html  doa_beans.json
(+4560 files in other folders)
